# pybreakout

./: .gitignore  README.rst  pyproject.toml
pybreakout/: game.py  settings.py  sprites.py
