[tool.poetry]
name = "pybreakout"
version = "0.1.0"
description = "Yet another breakout game written in Python"
authors = ["Juliano Fernandes <julianofernandes@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/julianolf/pybreakout"
keywords = ["breakout", "game", "pygame"]
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame"
]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "2.0.0.dev10"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "*"

[tool.poetry.scripts]
pybreakout = "pybreakout.game:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
